<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    >
    <ListPreference
        android:key="text_size"
        android:title="@string/text_size"
        android:dialogTitle="@string/text_size"
        android:entries="@array/text_size_entries"
        android:entryValues="@array/text_size_values"
        android:defaultValue="11" />
    <ListPreference
        android:key="trivia_categories"
        android:title="@string/trivia_categories"
        android:dialogTitle="@string/trivia_categories"
        android:entries="@array/trivia_categories"
        android:entryValues="@array/trivia_categories_values"
        android:defaultValue="@string/trivia_categories_default" />

    <ListPreference
        android:key="trivia_style"
        android:title="@string/trivia_style"
        android:dialogTitle="@string/trivia_style"
        android:entries="@array/trivia_style_entries"
        android:entryValues="@array/trivia_style_values"
        android:defaultValue="@string/trivia_style_default" />

    <SwitchPreference
        android:key="phone_usage_limit_notification"
        android:summaryOff="OFF"
        android:summaryOn="ON"
        android:title="Phone Usage Limit Notification" />

    <com.iruss.mogivisions.kiosk.TimePreference
        android:key="phone_usage_limit"
        android:title="@string/phone_usage_limit"
        android:dialogTitle="@string/phone_usage_limit"
        android:defaultValue="01:00" />

    <com.iruss.mogivisions.kiosk.TimePreference
        android:key="time_picker"
        android:title="@string/lockout_time"
        android:dialogTitle="@string/lockout_time"
        android:defaultValue="01:00" />

</PreferenceScreen>