<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/flashcardsDialogBackgroundcolor"
              android:textColor="#FFFFFF"
              android:paddingTop="@dimen/margin_small"
              android:paddingBottom="@dimen/margin_small"
              android:layout_width="300dp"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:gravity="center"
        android:text="@string/front"
        android:id="@+id/label_front"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textMultiLine"
        android:id="@+id/edit_front"

        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/back"
        android:gravity="center"
        android:id="@+id/label_back"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:inputType="textMultiLine"
        android:id="@+id/edit_back"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_red"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/cancel"
            android:id="@+id/button_cancel" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_green"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:text="@string/ok"
            android:id="@+id/button_ok" />
    </LinearLayout>

</LinearLayout>