<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp"
    android:background="@drawable/settingsbackground"
    tools:context="view.ReviewActivity">

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/margin_small"
        android:background="@drawable/rounded_button_white"
        >

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/warningSymbol"
                android:layout_width="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_tiny"
                android:paddingLeft="4dp"
                android:paddingRight="2dp"
                android:background="@drawable/ic_warning_black_24dp"
                android:layout_column="1"/>
            <TextView
                android:id="@+id/warning"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="12sp"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="@color/textColorDark"
                android:text="You need at least 20 more cards for this to be a valid deck"
                android:layout_column="2"/>
        </TableRow>
    </TableLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/rounded_button_white"
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:textColor="@color/black"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_front"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:id="@+id/separator"
        android:visibility="visible"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textColor="@color/black"
        android:padding="15dp"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/text_back"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:id="@+id/linear_layout">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="@drawable/rounded_button_red"
            android:text="@string/wrong"

            android:id="@+id/button_wrong"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:background="@drawable/rounded_button_red"
            android:text="@string/show_answer"
            android:id="@+id/button_answer"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/rounded_button_grey"
            android:visibility="gone"
            android:text="@string/speak_answer"
            android:layout_marginBottom="@dimen/margin_medium"
            android:id="@+id/button_speak"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="@dimen/margin_medium"
            android:background="@drawable/rounded_button_green"
            android:text="@string/correct"
            android:id="@+id/button_correct"/>
    </LinearLayout>
    </LinearLayout>

</LinearLayout>
